Fixed image size on mobile. Also made templated footer link open in a new tab.

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -188,6 +188,8 @@
 
 	.image-full
 	{
+		max-width: 90vw;
+		max-height: 90vh;
 		margin: 0 0 3em 0;
 	}
 
